Yay! Finally fix CSS to always show menu on tablets

--- a/app/scss/layout.scss
+++ b/app/scss/layout.scss
@@ -112,6 +112,7 @@ body, html {
 		@include display-box;
 		@include box-ordinal-group(2);
 		@include transform(translateX(100%));
+		@include box-flex(1);
 	}
 }
 
